--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img {
 </div>
 
 
-<a href="https://playswellwithbutter.com/short-rib-ragu-recipe/">
+<a href="https://articminkus.github.io/Abels-sites-directory/">
 <img src="images/graphics/logo.png" alt="url" width="100" height="100">
 <p> other sites developed by abel </p>
 </a>
@@ -104,3 +104,4 @@ img {
 
 </body>
 </html>
+
